# C_ML

./: .gitignore  CMakeLists.txt  README.md
debug/: main
include/: activation_functions.hpp  layer.hpp  neural_activation.hpp  neural_network.hpp  neural_util.hpp  neuron.hpp  neuron_base.hpp  neuron_utils.hpp  verify.hpp
release/: main
src/: CMakeLists.txt  data1000.txt  gen_data.py  main.cpp  verify.cpp
